<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#87cefa"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/headshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:contentDescription="@string/headshot" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/text_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state_title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/feature_title"
            android:textSize="15sp" />

        <!-- 均值 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_x_avg"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/x_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_y_avg"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/y_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_z_avg"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/z_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <!-- 方差 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_x_deviation"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/x_deviation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_y_deviation"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/y_deviation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_z_deviation"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/z_deviation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <!-- 相关系数 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_xy_correlation"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/xy_correlation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_yz_correlation"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/yz_correlation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_xz_correlation"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/xz_correlation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <!-- 偏度 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_x_skewness"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/x_skewness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_y_skewness"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/y_skewness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_z_skewness"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/z_skewness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <!-- 峰度 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_x_kurto"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/x_kurto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_y_kurto"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/y_kurto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_z_kurto"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/z_kurto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_state" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>